# sortsmill-autoconf-archive

./: .hgignore  AUTHORS  COPYING  Makefile.am  README  bitbucket-pipelines.yml  configure.ac  stm_begin_end_option.m4  stm_changeloggerize.m4  stm_check_constant.m4  stm_check_dlopen_lib.m4  stm_check_locales.m4  stm_check_ltdlopen_lib.m4  stm_config_makefiles.m4  stm_configmake.m4  stm_configmake_rules.m4  stm_constant.m4  stm_floating_point_constant.m4  stm_gettext_tools_rules.m4  stm_iconv.m4  stm_indent_pro_links.m4  stm_lib_atomic_ops.m4  stm_lib_giflib.m4  stm_lib_gmp.m4  stm_lib_libjpeg.m4  stm_lib_pcre.m4  stm_lib_tiff.m4  stm_lib_zlib.m4  stm_library_mk.m4  stm_ln_man_to_man.m4  stm_m4sugar.m4  stm_make_readme.m4  stm_prefixed_install.m4  stm_prog_cvc4.m4  stm_prog_cython.m4  stm_prog_gettext_tools.m4  stm_prog_gnu_indent.m4  stm_prog_gnu_make.m4  stm_prog_iconv.m4  stm_prog_m4.m4  (+7 more)
