# -*- tab-width: 4 -*-

# Copyright (C) 2013 Khaled Hosny and Barry Schwartz
# 
# This file is free software; Khaled Hosny and Barry Schwartz give
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.

ACLOCAL_AMFLAGS = -I .

aclocaldir = ${datadir}/aclocal

dist_aclocal_DATA =

dist_aclocal_DATA += stm_analyze_package_version.m4
dist_aclocal_DATA += stm_path_progs_cached_and_precious.m4
